openstack-trove (2014.2~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Updated (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Fri, 03 Oct 2014 23:50:11 +0800

openstack-trove (2014.2~b3-3) experimental; urgency=medium

  * New version of Isolate_unit_tests_from_integration_tests_data.patch.

 -- Thomas Goirand <zigo@debian.org>  Thu, 25 Sep 2014 15:49:57 +0000

openstack-trove (2014.2~b3-2) experimental; urgency=medium

  * Adds Isolate_unit_tests_from_integration_tests_data.patch.
  * Section: doc for trove-doc.
  * Fail the build in case of unit test failures.
  * Add couples of adduser depends to shut-up lintian.

 -- Thomas Goirand <zigo@debian.org>  Tue, 23 Sep 2014 14:37:06 +0000

openstack-trove (2014.2~b3-1) experimental; urgency=medium

  * New upstream release.
  * Rebased debian/patches.
  * Updated (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Tue, 01 Jul 2014 23:11:55 +0800

openstack-trove (2014.1-5) unstable; urgency=medium

  * Added missing package: trove-conductor.

 -- Thomas Goirand <zigo@debian.org>  Wed, 02 Jul 2014 23:58:19 +0800

openstack-trove (2014.1-4) unstable; urgency=medium

  * Now build-depends: openstack-pkg-tools version >= 12~.

 -- Thomas Goirand <zigo@debian.org>  Thu, 05 Jun 2014 14:38:04 +0000

openstack-trove (2014.1-3) unstable; urgency=medium

  * Switched from restarting daemons to copytruncate in logrotate.

 -- Thomas Goirand <zigo@debian.org>  Thu, 29 May 2014 14:22:31 +0800

openstack-trove (2014.1-2) unstable; urgency=medium

  * Added Spanish debconf template translation thanks to Camaleón
    <noelamac@gmail.com> (Closes: #742346).

 -- Thomas Goirand <zigo@debian.org>  Sat, 03 May 2014 03:59:09 +0000

openstack-trove (2014.1-1) unstable; urgency=medium

  * New upstream release (Closes: #746105).
  * Added initial German debconf translation (Closes: #739450).
  * Corrected debian/copyright for the doc/source/_static/nature.css which is