@@ -8,7 +8,7 @@ include /usr/share/openstack-pkg-tools/pkgos.make
 export OSLO_PACKAGE_VERSION=$(VERSION)
 
 %:
-	dh $@ --buildsystem=python_distutils --with python2,sphinxdoc
+	dh $@ --buildsystem=python_distutils --with python2,sphinxdoc,systemd
 
 override_dh_auto_clean:
 	dh_auto_clean
@@ -18,6 +18,7 @@ override_dh_auto_clean:
 	rm -f debian/trove-guestagent.postinst
 	rm -f debian/trove-api.postinst
 	rm -f debian/trove-api.config
+	rm -f debian/*.init debian/*.service debian/*.upstart
 
 override_dh_auto_build:
 	dh_auto_build
