@@ -1,11 +1,0 @@
-description "Trove Conductor"
-author "Thomas Goirand <zigo@debian.org>"
-
-start on runlevel [2345]
-stop on runlevel [!2345]
-
-respawn
-
-exec start-stop-daemon --start --chuid trove:trove \
-            --chdir /var/lib/trove --name trove-api \
-            --exec /usr/bin/trove-conductor -- --config-file=/etc/trove/trove-conductor.conf --log-dir=/var/log/trove --logfile=conductor.log
