@@ -1,11 +1,0 @@
-description "Trove Guest Agent"
-author "Thomas Goirand <zigo@debian.org>"
-
-start on runlevel [2345]
-stop on runlevel [!2345]
-
-respawn
-
-exec start-stop-daemon --start --chuid trove:trove \
-            --chdir /var/lib/trove --name trove-guestagent \
-            --exec /usr/bin/trove-guestagent -- --config-file=/etc/trove/trove-guestagent.conf --log-dir=/var/log/trove --logfile=guestagent.log
